# Chakravyuh

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: azure-static-web-apps-salmon-plant-01df91e0f.yml  main_chakravyuh.yml
app/: main.py
app/config/: settings.py
app/manager/: indicator_manager.py  position_manager.py  websocket_manager.py
app/models/: market_data_response.py  ohlcv_bar.py  position.py  symbol_info.py  symbol_stats.py
app/services/: api_client.py
app/styles/: dark_theme.qss
app/ui/: main_window.py
app/ui/dialogs/: about_dialog.py  settings.dialog.py
app/ui/widgets/: chart_widget.py  data_panel.py  symbol_list.py  toolbar.py
backend/: logging.conf  main.py
backend/models/: data_request.py  date_range_request.py  error.py  market_data_response.py  ohlc.py  replay_stream_message.py  symbol_info.py  symbol_stats.py  websocket_command.py
backend/repository/: commodities.py
backend/routers/: __init__.py  commodities.py
backend/services/: commodities.py
data/copper/: copper_1h.csv  copper_4h.csv  copper_d.csv  copper_w.csv
data/gold/: gold_1h.csv  gold_4h.csv  gold_d.csv  gold_w.csv
data/natgas/: natgas_1h.csv  natgas_4h.csv  natgas_w.csv
data/silver/: silver_1h.csv  silver_4h.csv  silver_d.csv  silver_w.csv
data/usoil/: usoil_1h.csv  usoil_4h.csv  usoil_d.csv  usoil_w.csv
data_loaders/: ohlc_tf_converter.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChartManager.jsx  (+9 more)
(+3 files in other folders)
