[project]
name = "chakravyuh"
version = "0.1.0"
description = ""
authors = [
    {name = "Anuj Bhor",email = "bhoranuj6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ta-lib @ file:///C:/Users/OneDrive/Desktop/Chakravyuh/ta_lib-0.6.0-cp313-cp313-win_amd64.whl"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
